# qt_security_camera

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.txt  conanfile.py  conanfile.txt  main.cpp  main.qrc  main_ui.qml  opencvimageprovider.cpp  opencvimageprovider.h  resources.qrc  runApp.sh  videostreamer.cpp  videostreamer.h
build_rpi/: CMakeCache.txt
etc/lib/: libQt6OpenGL.so.6  libQt6QmlModels.so.6  libQt6QmlWorkerScript.so.6  libQt6QuickControls2.so.6  libQt6QuickControls2Impl.so.6  libQt6QuickTemplates2.so.6
qml/: Controls.qml  CustomSwitch.qml  TopBar.qml  main_ui.qml
src/: CMakeLists.txt  OpencvImageProvider.cpp  OpencvImageProvider.h  VideoStreamer.cpp  VideoStreamer.h  main.cpp  resources.qrc
src/qml/: Controls.qml  LiveView.qml  MainUI.qml  RightBar.qml  TopBar.qml
test/: CMakeLists.txt
test/unittest/: CMakeLists.txt  TestVideoStreamer.cpp  TestVideoStreamer.hpp
