cmake_minimum_required(VERSION 3.15.0)
project(qt-cam-app VERSION 0.2.0)

message (STATUS ${PROJECT_SOURCE_DIR})

if (${CMAKE_CXX_COMPILER} STREQUAL "/usr/bin/g++")
    set(CMAKE_CROSSCOMPILING FALSE)
    set(OpenCV_DIR /home/rudi/opencv-build/)
elseif(${CMAKE_CXX_COMPILER} STREQUAL "/usr/bin/aarch64-linux-gnu-g++-9")
    set(CMAKE_CROSSCOMPILING TRUE)
    set(OpenCV_DIR ${PROJECT_SOURCE_DIR}/etc/lib/aarch64-linux-gnu/cmake/opencv4)
    set(OpenCV_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/etc/include/opencv4)
    set(Additional_LIBS ${PROJECT_SOURCE_DIR}/etc/lib/aarch64-linux-gnu/)
    include_directories(${OpenCV_INCLUDE_DIRS})
    link_directories(${Additional_LIBS})
else()
    message(ERROR ${CMAKE_CXX_COMPILER} " unsupported CXX Compiler")
endif()

set(TARGET_NAME cat_cam_app)

add_subdirectory(src)
if (${CMAKE_CXX_COMPILER} STREQUAL "/usr/bin/g++")
    add_subdirectory(test)
endif()
